<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lessons.NewLessonActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:id="@+id/new_lesson_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_lesson_date"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="10-10-19"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/new_lesson_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_spinner_title_course"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnerStyle"
            />
        <TextView
            android:id="@+id/new_lesson_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_lesson_group"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnerStyle"
            />
        <TextView
            android:id="@+id/new_lesson_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_lesson_theme"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnerStyle"
            />
        <TextView
            android:id="@+id/new_lesson_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_lesson_type"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnerStyle"
            />
        <TextView
            android:id="@+id/new_lesson_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/home_fragment_spinner_title_teacher"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnerStyle"
            />
        <TextView
            android:id="@+id/new_lesson_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_lesson_count"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_lesson_count"
            android:inputType="number"
            android:layout_marginTop="@dimen/margin_size_12"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_form"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    </RelativeLayout>

</ScrollView>