<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:src="@drawable/ic_ac_unit_black_24dp" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="@color/colorSplashText"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
         />

    <RelativeLayout
        android:id="@+id/afterAnimationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:visibility="gone"
        >


        <TextView
            android:id="@+id/AppTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorize_text"
            android:textColor="@color/colorBackground"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="@dimen/margin_size_12"
                android:layout_below="@id/AppTextView"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_marginTop="25dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPassword"
                android:textSize="15sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/password"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </RelativeLayout>
    <include
        android:id="@+id/llProgressBar"
        android:visibility="gone"
        layout="@layout/progress_dialog"/>

</RelativeLayout>